upstream/config/openshift/400-webhook-controller.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: validation.webhook.manual-approval.openshift-pipelines.org
webhooks:
  - admissionReviewVersions: ["v1"]
    clientConfig:
      service:
        name: manual-approval-webhook
        namespace: openshift-pipelines
    failurePolicy: Fail
    sideEffects: None
    name: validation.webhook.manual-approval.openshift-pipelines.org
